fix form stretching

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -147,14 +147,14 @@
 
 .modal__label {
   position: relative;
-  color: #f00;
+  /* color: #f00;
   font-size: 12px;
-  line-height: 15px;
+  line-height: 15px; */
 }
 
 .modal__error {
-  /* color: #f00; */
-  position: absolute;
+  color: #f00;
+  /* position: absolute; */
   top: calc(100% + 5px);
   left: 0;
   /* transition: opacity 0.3s; */
